# device_volume

./: CHANGELOG.md  LICENSE  README.md  ffigen.yaml  jnigen.yaml  pubspec.yaml  spec.md
.github/workflows/: ci.yml  publish.yml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: device_volume.podspec
ios/Classes/: device_volume.c  device_volume.m
lib/: device_volume.dart  device_volume_bindings_generated.dart
lib/src/backends/: android_backend.dart  backend_selector.dart  device_volume_backend.dart  ffi_backend.dart
lib/src/compute/: device_volume_compute.dart
lib/src/exceptions/: device_volume_exception.dart
lib/src/jni/: device_volume_helper.dart
lib/src/models/: volume_channel.dart  volume_state.dart
linux/: CMakeLists.txt
macos/: device_volume.podspec
macos/Classes/: device_volume.c  device_volume.m
src/: CMakeLists.txt  device_volume.c  device_volume.h
test/: exceptions_test.dart  ffi_backend_error_test.dart  volume_state_test.dart
windows/: CMakeLists.txt
(+3 files in other folders)
